# hf-plugin-p4

./: .gitignore  LICENSE  README.md  manifest.json
.github/workflows/: plugin-release.yml
app/: P4Panel.tsx  i18n.ts  index.tsx  ipc.ts  package-lock.json  package.json  theme.css  tsconfig.json  types.ts  vite.config.ts
app/components/: ActionButton.tsx  FeedbackBanner.tsx  InputField.tsx  ModalOverlay.tsx  fileUtils.tsx
app/modals/: BookmarkFormModal.tsx  SubmitModal.tsx  SyncModal.tsx
app/pages/: DetailPage.tsx  WorkspaceListPage.tsx
app/tabs/: BookmarksTab.tsx  ChangelistsTab.tsx  OpenedFilesTab.tsx
backend/: Cargo.toml
backend/src/: commands.rs  lib.rs  workflow_steps.rs
