[package]
name = "hf-plugin-p4"
version = "1.0.0"
edition = "2021"
description = "HaloForge built-in Perforce (P4) Integration plugin (backend)"

[lib]
name = "hf_plugin_p4"
crate-type = ["cdylib", "rlib"]

[dependencies]
hf-plugin-api.workspace = true
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
